# mpi_heat

./: CMakeLists.txt  README.md  main.cpp  matrix.txt
